<resources>
    <string name="app_name">MMA Store</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="register_now">Register now</string>
    <string name="create_address">Create Address</string>
    <string name="name">Name</string>
    <string name="address_lane">Address Lane</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="add_address">Add Address</string>
    <string name="continue_to_payment">Continue to payment</string>
    <string name="address">Address</string>
    <string name="mma_rash_guard_top">MMA Rash guard top</string>
    <string name="very_good">Very Good</string>
    <string name="_49_reviews">49 Reviews</string>
    <string name="description_item">Description Item</string>
    <string name="mma_sports_wear_lorem_ipsum_dolor">MMA Sports wear lorem ipsum dolor ..</string>
    <string name="select_size">Select Size</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="search_your_product">Search Your Product</string>
    <string name="welcome_to_mma_store">Welcome to MMA Store</string>
    <string name="world_s_biggest_mma_webshop">World\'s biggest MMA webshop</string>

    <string name="payment">Payment</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="signup">Signup</string>

    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="loading">Loading...</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="featured">Featured</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="brussels_belgium">Brussels Belgium</string>
    <string name="mma_top">MMA Top</string>
    <string name="log_out">Log out</string>
    <string name="change_language">Change Language</string>
    <string name="ver_good">Very Good</string>
    <string name="good">Good</string>
</resources>