<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="right"
                    android:layout_marginEnd="5dp"
                    android:gravity="right"
                    android:text="@string/see_all"
                    android:textSize="18sp"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycler"
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/featured"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/featured_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="right"
                    android:layout_marginEnd="5dp"
                    android:gravity="right"
                    android:text="@string/see_all"
                    android:textSize="18sp"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/featured_recycler"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_sellers"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="right"
                    android:layout_marginEnd="5dp"
                    android:gravity="right"
                    android:id="@+id/best_seller"
                    android:text="@string/see_all"
                    android:textSize="18sp"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bestseller_recycler"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>